src/main/java/org/example/videoclub/errors/CorreoExistenteException.java
package org.example.videoclub.errors;

public class CorreoExistenteException extends Exception{

    public CorreoExistenteException(String message) {
        super(message);
    }

}
